feat: Add delete account support
